--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <title>Nicole's A4</title>
 </head>
 <body>
+    <div id="header">
+        <h1>Matching Memory Game</h1>
+        <h2>Click on a card to flip it over. Try to find the matching card.</h2>
+        <h2>Click on the reset button to start a new game.</h2>
+        <h3>Number of clicks: <span id="numClicks">0</span></h3>
+        <h3>Number of pairs matched: <span id="numPairs">0</span></h3>
+        <h3>Total number of pairs: <span id="totalPairs">0</span></h3>
+    </div>
     <div id="game_grid">
         <div id="card1"class="card">
             <div class="front_face"><img src="https://raw.githubusercontent.com/nabil828/COMP2530-s23-A4-Sample-Code/2f94ce45c10c45364cb110c8e73f4ae85cd1802b/001.png" alt=""></div>
