--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h3>Number of clicks: <span id="numClicks">0</span></h3>
         <h3>Number of pairs matched: <span id="numPairs">0</span></h3>
         <h3>Total number of pairs: <span id="totalPairs">0</span></h3>
+        <h2>You have <span id="totalTime"></span> seconds. <span id="timer"></span> seconds left!</h2>
     </div>
     <div id="game_grid">
         <div id="card1"class="card">
