--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
         <h3>Number of pairs matched: <span id="numPairs">0</span></h3>
         <h3>Total number of pairs: <span id="totalPairs">0</span></h3>
         <h2>You have <span id="totalTime"></span> seconds. <span id="timer"></span> seconds left!</h2>
+        <div class="buttons">
+            <button id="resetBtn">Reset</button>
+            <button id="startBtn">Start</button>
+        </div>
     </div>
     <div id="game_grid">
         <div id="card1"class="card">
             <div class="front_face"><img src="https://raw.githubusercontent.com/nabil828/COMP2530-s23-A4-Sample-Code/2f94ce45c10c45364cb110c8e73f4ae85cd1802b/001.png" alt=""></div>
-            <div class="back_face"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Pokebola-pokeball-png-0.png" alt=""></div>
+            <div class="back_face"><img src="pokeball.png" alt=""></div>
         </div>
         <div id="card2"class="card">
             <div class="front_face"><img src="https://raw.githubusercontent.com/nabil828/COMP2530-s23-A4-Sample-Code/2f94ce45c10c45364cb110c8e73f4ae85cd1802b/001.png" alt=""></div>
-            <div class="back_face"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Pokebola-pokeball-png-0.png" alt=""></div>
+            <div class="back_face"><img src="quickball.png" alt=""></div>
         </div>
         <div id="card3"class="card">
             <div class="front_face"><img src="https://raw.githubusercontent.com/nabil828/COMP2530-s23-A4-Sample-Code/2f94ce45c10c45364cb110c8e73f4ae85cd1802b/002.png" alt=""></div>
