step 15 added difficulty levels

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <h1>Matching Memory Game</h1>
         <h2>Click on a card to flip it over. Try to find the matching card.</h2>
         <h2>Click on the reset button to start a new game.</h2>
+        <div class="buttons">
+            <button id="easy" class="mode active">Easy</button>
+            <button id="medium" class="mode">Medium</button>
+            <button id="hard" class="mode">Hard</button>
+        </div>
         <h3>Number of clicks: <span id="numClicks">0</span></h3>
         <h3>Number of pairs matched: <span id="numPairs">0</span></h3>
         <h3>Total number of pairs: <span id="totalPairs">0</span></h3>
