step 16 added theme

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             <button id="medium" class="mode">Medium</button>
             <button id="hard" class="mode">Hard</button>
         </div>
+        <br>
+        <div class="themes">
+            <button id="normalMode" class="active">Normal Mode</button>
+            <button id="loveMode">Love Mode</button>
+        </div>
         <h3>Number of clicks: <span id="numClicks">0</span></h3>
         <h3>Number of pairs matched: <span id="numPairs">0</span></h3>
         <h3>Total number of pairs: <span id="totalPairs">0</span></h3>
